# speaker-diarization-benchmarks

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: deploy-fly.yml  prepare-fly-datasets.yml  publish-benchmarks.yml
app/: __init__.py  auth.py  config.py  datasets.py  foxnose_store.py  main.py  metrics.py  models.py  runner.py  schemas.py
app/runtime/: __init__.py  worker.py
app/systems/: __init__.py  command.py
config/: datasets.docker.json  datasets.vox_only.json  foxnose-schemas.md  open_track_sources.example.json
scripts/: bootstrap_foxnose_flux.py  bootstrap_foxnose_schema.py  open_track_bind_sources.py  open_track_check.py  open_track_init_layout.sh  open_track_prepare_alimeeting_eval.py  open_track_prepare_voxconverse.py  open_track_smoke_api.py  public_repo_check.sh  publish_benchmarks.py
